--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,16 +6,11 @@ authors = ["Luís Otávio Amorim <luisotaviolamorim@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = ">=3.10,<3.12"
-PySimpleGUI = "^4.60.3"
 matplotlib = "^3.5.3"
 numpy = "^1.23.1"
 scipy = "^1.9.0"
-audio-dspy = "^0.0.4"
-yodel = "^0.3.0"
 PyAudio = "^0.2.12"
-PyQt5 = "^5.15.7"
-pyqtgraph = "^0.12.4"
-winaudio = "^1.0.6"
+kivymd = "^1.1.1"
 
 [tool.poetry.dev-dependencies]
 blue = "^0.9.1"
