Changes for r-pi

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ PyAudio = "^0.2.12"
 kivymd = "^1.1.1"
 Kivy-Garden = "^0.1.5"
 tk = "^0.1.0"
+isort = "^5.10.1"
 
 [tool.poetry.dev-dependencies]
 blue = "^0.9.1"
